fix horizontal scrolling

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -122,7 +122,7 @@
         flex-direction: row-reverse;
         transition: 0.5s;
         z-index: 20;
-        position: absolute;
+        position: fixed;
         right: -500px;
         top: 45px;
         
